# LostTech

./: Analyzer.cpp  Analyzer.hpp  BufferManager.cpp  BufferManager.hpp  CMakeLists.txt  LICENSE  LostTech.def  README.md  Synthesizer.cpp  Synthesizer.hpp  WavePlug.cpp  WavePlug.hpp  WavePlugEditor.cpp  WavePlugEditor.hpp  WavePlugMain.cpp  WavePlugMainNoGUI.cpp  WavePlugNoGUI.cpp  WavePlugResource.rc  makefile  waveplugparams.h  wpfunc.cpp  wpfunc.hpp  wpmodulators.cpp  wpmodulators.hpp  wpstdinclude.h
dependencies/vstsdk2.4/public.sdk/: CMakeLists.txt
dependencies/vstsdk2.4/vstgui.sf/: CMakeLists.txt
docs/: losttech.css  userdoc.html
